Bug 168755 - FILESAVE PPTX Invalid shape target exported on SmartArt object with animation
Summary: FILESAVE PPTX Invalid shape target exported on SmartArt object with animation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords:
Depends on:
Blocks: PPTX-Corrupted OOXML-SmartArt PPTX-Animations
  Show dependency treegraph
 
Reported: 2025-10-08 16:36 UTC by Aron Budea
Modified: 2025-11-10 12:48 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-10-08 16:36:35 UTC
Attachment 153812 [details] from bug 127275 contains a SmartArt graphic, with Fade (in) animation defined on it. Open and save it back to PPTX.

=> PowerPoint fails to open the result cleanly.

While officeotron finds no issues in the file, OOXML-Validator points out the following:
[{"Description":"The attribute 'spid' has invalid value '-1'. The string '-1' is not a valid 'UInt32' value.","Path":{"Namespaces":{},"XPath":"/p:sld[1]/p:timing[1]/p:tnLst[1]/p:par[1]/p:cTn[1]/p:childTnLst[1]/p:seq[1]/p:cTn[1]/p:childTnLst[1]/p:par[1]/p:cTn[1]/p:childTnLst[1]/p:par[1]/p:cTn[1]/p:childTnLst[1]/p:par[1]/p:cTn[1]/p:childTnLst[1]/p:animEffect[1]/p:cBhvr[1]/p:tgtEl[1]/p:spTgt[1]","PartUri":"/ppt/slides/slide1.xml"},"Id":"Sch_AttributeValueDataTypeDetailed","ErrorType":"Schema"},{"Description":"The attribute 'spid' has invalid value '-1'. The string '-1' is not a valid 'UInt32' value.","Path":{"Namespaces":{},"XPath":"/p:sld[1]/p:timing[1]/p:tnLst[1]/p:par[1]/p:cTn[1]/p:childTnLst[1]/p:seq[1]/p:cTn[1]/p:childTnLst[1]/p:par[1]/p:cTn[1]/p:childTnLst[1]/p:par[1]/p:cTn[1]/p:childTnLst[1]/p:par[1]/p:cTn[1]/p:childTnLst[1]/p:set[1]/p:cBhvr[1]/p:tgtEl[1]/p:spTgt[1]","PartUri":"/ppt/slides/slide1.xml"},"Id":"Sch_AttributeValueDataTypeDetailed","ErrorType":"Schema"}]

One can unzip the PPTX and pretty-print the XMLs with the following command in Linux/Cygwin:
find . \( -name "*.xml" -o -name "*.rels" \) -type f -exec xmllint --output '{}' --format '{}' \;

The problematic elements in ppt/slides/slide1.xml look like this:
<p:spTgt spid="-1"/>

Observed with LO 26.2.0.0.alpha0+ (8ea8e254a3151f5390f3a10ff156fcaf8e7c5d5c), 4.0.0.3 / Windows.
Comment 1 Commit Notification 2025-11-07 06:29:22 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2de71234b3829672505cf8f6222c27eaf4f0b7af

tdf#168755 sd smartart: use unified ids for diagrams and shapes

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-11-10 12:48:31 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/ac258f17f86ef23841980f08e1c3d97e9c46553c

tdf#168755 sd smartart: use unified ids for diagrams and shapes

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.