tdf#168755 sd smartart: use unified ids for diagrams and shapes

Diagrams (SmartArt) had their separate counters for ids, and
when saving animation details, the shape to target wasn't
found, resulting in tags like this, where negative spid
is invalid:
<p:spTgt spid="-1"/>

See "19.5.72 spTgt (Shape Target)" in OOXML spec.

Ids can't be completely unified, as it would affect naming
in ppt/diagrams and on the UI to have large numbers
(eg. in the 40-60 range), while users would expect them
to start from 1.
At least ids to "p:cNvPr" under "p:graphicFrame" should be
unified.

The large number is because shapes are numbered consecutively
over all slides, while for the most part they could restart
on each slide, changing that is not in scope for this fix.

Change-Id: I9790036cc0743313e98f5926d4dc365c8051bd04
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193479
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Aron Budea <aron.budea@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 2de71234b3829672505cf8f6222c27eaf4f0b7af)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193553
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>